fix spacing, update styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
 main {
-  padding: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  margin-top: 50px;
-  display: block;
-  color: red !important;
-  height: 100vh;
   background-image: url('./assets/imgs/angular-logo.png');
+  color: red;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  margin-top: 50px;
+  padding: 1em;
+  text-align: center;
 }
