--- a/src/app/theme/styles.global.scss
+++ b/src/app/theme/styles.global.scss
@@ -11,8 +11,3 @@
 // core
 @import "./core/font";
 @import "./core/typo";
-
-// other global styles
-main {
-  display: flex;
-}
